--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: #212d94;
   min-height: 100vh;
+  color: aliceblue;
+}
+
+.sidebar {
+  width: 10rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  bottom: 0;
 }
 
-.App-link {
-  color: #61dafb;
+.text-right {
+  text-align: right;
+  right: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sections {
+  display: flex;
+  flex-direction: column
+}
+
+.App-center{
+  top: 47%;
+  left: 25%;
+  z-index: 3; 
+  position: absolute;
+  transform: translate(-50%,-50%);
+  width: 50rem;
 }
